--- a/linearCopy/index.html
+++ b/linearCopy/index.html
@@ -7,36 +7,77 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navWrapper">
-        <div class="logo">Linear</div>
-        <div class="links">
-            <a>Product</a>
-            <a>Resources</a>
-            <a>pricing</a>
-            <a>customers</a>
-            <a>contact</a>
-        </div>
-        <div class="actions">
-            <button class="login">Login</button>
-            <button class="signup">Sign Up</button>
-        </div>
-    </nav>
+    <header>
+        <nav class="navWrapper">
+            <div class="logo">Linear</div>
+            <div class="links">
+                <a href="#">Product</a>
+                <a href="#">Resources</a>
+                <a href="#">pricing</a>
+                <a href="#">customers</a>
+                <a href="#">contact</a>
+            </div>
+            <div class="actions">
+                <button class="login">Login</button>
+                <button class="signup">Sign Up</button>
+            </div>
+        </nav>
+    </header>
     
+
     <main>
 
-        <div class="hero">
-            <h1>Linear is a purpose-built tool for planning and building products</h1>
-            <p>Meet the system for modern software development.<br> Streamline issues, projects, and product roadmaps</p>
-            <button class="start">start building</button>
-            <button class="new">New:linear agent for slack</button>
-        </div>
+        <section class="hero">
+            <div class="heroContent">
+                <h1>Linear is a purpose-built tool for planning and building products</h1>
+                <p>
+                    Meet the system for modern software development.
+                   Streamline issues, projects, and product roadmaps
+                </p>
 
-        <div class="customer">
-            <p class="p1">Powering the world’s best product teams.</p>
-            <p class="p2">From next-gen startups to established enterprises.</p>
-        </div>
+                <div class="heroActions">
+                    <button class="start">start building</button>
+                    <button class="new">New:linear agent for slack</button>
+                </div>
+            </div>
+
+            <div class="heroVisuals">
+
+            </div>
+        </section>
+
+        <section class="customers">
+            <p class="headline">Powering the world's best product teams.</p>
+            <p class="subtext">From next-gen startups to established enterprises.</p>
+        </section>
+
+        <section class="features">
+            <h2>Everything you need to build better products</h2>
+
+            <div class="featureGrid">
+                <article class="featureCard"></article>
+                <article class="featureCard"></article>
+                <article class="featureCard"></article>
+            </div>
+        </section>
+
+        <section class="workflow">
+            <div class="workflowContent">
+                <h2>Designed for modern workflows</h2>
+                <p>Plan, track, and ship faster with fewer tools.</p>
+            </div>
+
+            <div class="workflowVisual">
+                <!-- image later -->
+            </div>
+        </section>
 
     </main>
+
+    <footer class="footer">
+        <p>© 2025 Linear Clone. All rights reserved.</p>
+    </footer>
+    
     <script src="index.js"></script>
 </body>
 </html>
