--- a/linearCopy/index.html
+++ b/linearCopy/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LINEAR</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -77,7 +77,7 @@
     <footer class="footer">
         <p>© 2025 Linear Clone. All rights reserved.</p>
     </footer>
-    
+
     <script src="index.js"></script>
 </body>
 </html>
